# HACK_DroneControl

./: .gitignore  CMakeLists.txt  PID.py  README.md  Untitled.ipynb  camera.py  controller_python.py  data_viewer.py  deploy.sh  deploy2.sh  flight_control.py  flight_data.pkl  flight_data.pkl1  flight_data.pkl2  flight_data.pkl3  fly.py  main.c  sensor.py  startDrone.py  ultrasonic_sensor.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
cam-server/: camera.py  get_images.sh  server.py
colorDetection/: detectColors.py  get_images.sh  setup.py
